# CubeCLI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
cubecli/: __init__.py  __main__.py  config.py
cubecli/core/: __init__.py  audio.py  cube_sim.py  fmc.py  scramble.py  stats.py  timer.py
cubecli/data/: db.py  models.py
cubecli/training/: __init__.py  trainer.py
cubecli/training/data/: oll.json  pll.json
cubecli/ui/: __init__.py  app.py  app.tcss
cubecli/ui/screens/: __init__.py  case_picker.py  puzzle_picker.py  stats_screen.py  timer_screen.py  train_screen.py
cubecli/ui/widgets/: __init__.py  cube_preview.py  scramble_panel.py  solve_list.py  stats_panel.py  timer_display.py
docs/: GITHUB_SETUP.md
tests/: __init__.py  test_audio.py  test_cube_sim.py  test_fmc.py  test_package.py  test_power_features.py  test_scramble.py  test_stats.py  test_timer.py  test_trainer.py  test_ui.py
