[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubecli"
version = "0.1.0"
description = "A professional Rubik's Cube speedcubing timer for your terminal — WCA scrambles, ANSI cube preview, braille charts, OLL/PLL trainer."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "CubeCLI Contributors" },
]
keywords = [
  "rubiks-cube",
  "speedcubing",
  "timer",
  "cli",
  "tui",
  "terminal",
  "wca",
  "scramble",
  "cube",
  "puzzle",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Puzzle Games",
  "Topic :: Utilities",
]
dependencies = [
  "textual>=0.70.0",
  "rich>=13.0.0",
  "pyTwistyScrambler>=1.4",
  "textual-plot>=0.3.0",
  "pyperclip>=1.8.0",
  "beepy>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]
bluetooth = [
  "bleak>=0.21.0",
]
solver = [
  "kociemba>=1.2.1",
]
all = [
  "cubecli[bluetooth,solver]",
]

[project.urls]
Homepage       = "https://github.com/Axzo001/CubeCLI"
Documentation  = "https://github.com/Axzo001/CubeCLI/blob/main/README.md"
Repository     = "https://github.com/Axzo001/CubeCLI.git"
"Bug Tracker"  = "https://github.com/Axzo001/CubeCLI/issues"
Changelog      = "https://github.com/Axzo001/CubeCLI/blob/main/CHANGELOG.md"

[project.scripts]
cubecli = "cubecli.__main__:main"

# ─── Hatch ────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["cubecli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cubecli"]

# ─── Black ────────────────────────────────────────────────────────────────────

[tool.black]
target-version = ["py311"]
line-length = 100

# ─── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=cubecli --cov-report=term-missing --cov-report=xml"
